// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Merchants contentful upload checks for first line to be empty: createEntry 1`] = `Array []`;

exports[`Merchants contentful upload checks for first line to be empty: error 1`] = `
Array [
  Array [
    [Error: First line must be empty to match the template],
  ],
  Array [
    "Process failed",
  ],
]
`;

exports[`Merchants contentful upload checks for first line to be empty: getEntries 1`] = `
Array [
  Array [
    Object {
      "content_type": "serviceType",
    },
  ],
]
`;

exports[`Merchants contentful upload checks for first line to be empty: getLocales 1`] = `
Array [
  Array [],
]
`;

exports[`Merchants contentful upload checks for first line to be empty: log 1`] = `
Array [
  Array [
    "Looking in data/first-line-non-empty.tsv",
  ],
  Array [
    "Uploadng to roofer, using:
SPACE: SPACE_ID:value
ENVIRONMENT: CONTENTFUL_ENVIRONMENT:value",
  ],
  Array [
    "Reading data/first-line-non-empty.tsv",
  ],
]
`;

exports[`Merchants contentful upload checks that header line matches the template: createEntry 1`] = `Array []`;

exports[`Merchants contentful upload checks that header line matches the template: error 1`] = `
Array [
  Array [
    [Error: Second line doesn't match header template
Expected: Name, Latitude, Longitude, Type of Merchant, Address, Country, City, Postcode, PhoneNumber, Email, Website, Summary of Company
Found:    Name with incorrect label, Latitude, Longitude, Address, City, Postcode, PhoneNumber, Email, Website],
  ],
  Array [
    "Process failed",
  ],
]
`;

exports[`Merchants contentful upload checks that header line matches the template: getEntries 1`] = `
Array [
  Array [
    Object {
      "content_type": "serviceType",
    },
  ],
]
`;

exports[`Merchants contentful upload checks that header line matches the template: getLocales 1`] = `
Array [
  Array [],
]
`;

exports[`Merchants contentful upload checks that header line matches the template: log 1`] = `
Array [
  Array [
    "Looking in data/incorrect-header-line.tsv",
  ],
  Array [
    "Uploadng to roofer, using:
SPACE: SPACE_ID:value
ENVIRONMENT: CONTENTFUL_ENVIRONMENT:value",
  ],
  Array [
    "Reading data/incorrect-header-line.tsv",
  ],
]
`;

exports[`Merchants contentful upload continues when answered with "y": createClient 1`] = `
Array [
  Array [
    Object {
      "accessToken": "MANAGEMENT_ACCESS_TOKEN:value",
    },
  ],
]
`;

exports[`Merchants contentful upload continues when answered with "y": createEntry 1`] = `
Array [
  Array [
    "roofer",
    Object {
      "fields": Object {
        "address": Object {
          "en-US": "Havenweg 17, AARLE RIXTEL, 5735 SH",
        },
        "email": Object {
          "en-US": "info@aarlesebouwmaterialen.nl",
        },
        "entryType": Object {
          "en-US": "Merchant",
        },
        "location": Object {
          "en-US": Object {
            "lat": 23,
            "lon": 63,
          },
        },
        "name": Object {
          "en-US": "Aarlese Bouwmaterialen",
        },
        "phone": Object {
          "en-US": "0492-383300",
        },
        "serviceTypes": Object {
          "en-US": Array [
            Object {
              "sys": Object {
                "id": "id-2",
                "linkType": "Entry",
                "type": "Link",
              },
            },
          ],
        },
        "summary": Object {
          "en-US": "Test summary",
        },
        "website": Object {
          "en-US": undefined,
        },
      },
    },
  ],
  Array [
    "roofer",
    Object {
      "fields": Object {
        "address": Object {
          "en-US": "Havenweg 17, AARLE RIXTEL, 5735 SH",
        },
        "email": Object {
          "en-US": "info@aarlesebouwmaterialen.nl",
        },
        "entryType": Object {
          "en-US": "Merchant",
        },
        "location": Object {
          "en-US": Object {
            "lat": 23,
            "lon": 63,
          },
        },
        "name": Object {
          "en-US": "BMN Bouwmaterialen",
        },
        "phone": Object {
          "en-US": "0492-383300",
        },
        "serviceTypes": Object {
          "en-US": Array [
            Object {
              "sys": Object {
                "id": "id-2",
                "linkType": "Entry",
                "type": "Link",
              },
            },
          ],
        },
        "summary": Object {
          "en-US": "Test summary",
        },
        "website": Object {
          "en-US": undefined,
        },
      },
    },
  ],
  Array [
    "roofer",
    Object {
      "fields": Object {
        "address": Object {
          "en-US": "Havenweg 17, AARLE RIXTEL, 5735 SH",
        },
        "email": Object {
          "en-US": "info@aarlesebouwmaterialen.nl",
        },
        "entryType": Object {
          "en-US": "Merchant",
        },
        "location": Object {
          "en-US": Object {
            "lat": 23,
            "lon": 63,
          },
        },
        "name": Object {
          "en-US": "BMN Zaltbommel",
        },
        "phone": Object {
          "en-US": "0492-383300",
        },
        "serviceTypes": Object {
          "en-US": Array [
            Object {
              "sys": Object {
                "id": "id-2",
                "linkType": "Entry",
                "type": "Link",
              },
            },
          ],
        },
        "summary": Object {
          "en-US": "Test summary",
        },
        "website": Object {
          "en-US": undefined,
        },
      },
    },
  ],
  Array [
    "roofer",
    Object {
      "fields": Object {
        "address": Object {
          "en-US": "Gouwe 1, ZWOLLE, 8032 CA",
        },
        "email": Object {
          "en-US": undefined,
        },
        "entryType": Object {
          "en-US": "Merchant",
        },
        "location": Object {
          "en-US": Object {
            "lat": 23,
            "lon": 63,
          },
        },
        "name": Object {
          "en-US": "Aberson BV",
        },
        "phone": Object {
          "en-US": "088-4553600",
        },
        "serviceTypes": Object {
          "en-US": Array [
            Object {
              "sys": Object {
                "id": "id-2",
                "linkType": "Entry",
                "type": "Link",
              },
            },
          ],
        },
        "summary": Object {
          "en-US": "Test summary",
        },
        "website": Object {
          "en-US": "https://www.aberson.nl",
        },
      },
    },
  ],
  Array [
    "roofer",
    Object {
      "fields": Object {
        "address": Object {
          "en-US": ", 088-4553600, info@aberson.nl",
        },
        "email": Object {
          "en-US": "Test summary",
        },
        "entryType": Object {
          "en-US": "Merchant",
        },
        "location": Object {
          "en-US": Object {
            "lat": 23,
            "lon": 63,
          },
        },
        "name": Object {
          "en-US": "Aberson BV2",
        },
        "phone": Object {
          "en-US": "www.aberson.nl",
        },
        "serviceTypes": Object {
          "en-US": Array [
            Object {
              "sys": Object {
                "id": "id-2",
                "linkType": "Entry",
                "type": "Link",
              },
            },
          ],
        },
        "summary": Object {
          "en-US": undefined,
        },
        "website": Object {
          "en-US": undefined,
        },
      },
    },
  ],
  Array [
    "serviceType",
    Object {
      "fields": Object {
        "name": Object {
          "en-US": "does_not_exist",
        },
      },
    },
  ],
  Array [
    "roofer",
    Object {
      "fields": Object {
        "address": Object {
          "en-US": "Gouwe 1, ZWOLLE, 8032 CA",
        },
        "email": Object {
          "en-US": "info@aberson.nl",
        },
        "entryType": Object {
          "en-US": "Merchant",
        },
        "location": Object {
          "en-US": Object {
            "lat": 23,
            "lon": 63,
          },
        },
        "name": Object {
          "en-US": "Aberson BV3",
        },
        "phone": Object {
          "en-US": "088-4553600",
        },
        "serviceTypes": Object {
          "en-US": Array [
            Object {
              "sys": Object {
                "id": "merchant-type-id",
                "linkType": "Entry",
                "type": "Link",
              },
            },
          ],
        },
        "summary": Object {
          "en-US": "Test summary",
        },
        "website": Object {
          "en-US": "http://www.aberson.nl",
        },
      },
    },
  ],
]
`;

exports[`Merchants contentful upload continues when answered with "y": error 1`] = `
Array [
  Array [
    [Error: fetch-mock: No fallback response defined for GET to https://maps.googleapis.com/maps/api/geocode/json?address=Aberson%20BV%20ZuidSolvayweg%202,%206049%20CP&key=undefined],
  ],
  Array [
    "Process failed",
  ],
]
`;

exports[`Merchants contentful upload continues when answered with "y": getEntries 1`] = `
Array [
  Array [
    Object {
      "content_type": "serviceType",
    },
  ],
]
`;

exports[`Merchants contentful upload continues when answered with "y": getEnvironment 1`] = `
Array [
  Array [
    "CONTENTFUL_ENVIRONMENT:value",
  ],
]
`;

exports[`Merchants contentful upload continues when answered with "y": getLocales 1`] = `
Array [
  Array [],
]
`;

exports[`Merchants contentful upload continues when answered with "y": getSpace 1`] = `
Array [
  Array [
    "SPACE_ID:value",
  ],
]
`;

exports[`Merchants contentful upload continues when answered with "y": log 1`] = `
Array [
  Array [
    "Looking in data/merchants.tsv",
  ],
  Array [
    "Uploadng to roofer, using:
SPACE: SPACE_ID:value
ENVIRONMENT: CONTENTFUL_ENVIRONMENT:value",
  ],
  Array [
    "Reading data/merchants.tsv",
  ],
  Array [
    "Uploading 11 lines to columns: Name, Latitude, Longitude, Type of Merchant, Address, Country, City, Postcode, PhoneNumber, Email, Website, Summary of Company",
  ],
  Array [
    "Uploading line 1: 'Aarlese Bouwmaterialen'",
  ],
  Array [
    "Uploading line 2: 'BMN Bouwmaterialen'",
  ],
  Array [
    "Uploading line 3: 'BMN Zaltbommel'",
  ],
  Array [
    "Uploading line 4: 'Aberson BV'",
  ],
  Array [
    "Uploading line 5: 'Aberson BV2'",
  ],
  Array [
    "Uploading line 6: 'Aberson BV3'",
  ],
  Array [
    "Created and Published new Service Type - 'does_not_exist' with id 'merchant-type-id'",
  ],
  Array [
    "Uploading line 7: 'Aberson BV Zuid'",
  ],
]
`;

exports[`Merchants contentful upload exits when answered with not "y": error 1`] = `Array []`;

exports[`Merchants contentful upload exits when answered with not "y": getEntries 1`] = `
Array [
  Array [
    Object {
      "content_type": "serviceType",
    },
  ],
]
`;

exports[`Merchants contentful upload exits when answered with not "y": getLocales 1`] = `
Array [
  Array [],
]
`;

exports[`Merchants contentful upload exits when answered with not "y": log 1`] = `
Array [
  Array [
    "Looking in data/merchants.tsv",
  ],
  Array [
    "Uploadng to roofer, using:
SPACE: SPACE_ID:value
ENVIRONMENT: CONTENTFUL_ENVIRONMENT:value",
  ],
  Array [
    "Exiting...",
  ],
]
`;

exports[`Merchants contentful upload geocodes address: createEntry 1`] = `
Array [
  Array [
    "roofer",
    Object {
      "fields": Object {
        "address": Object {
          "en-US": "Havenweg 17, AARLE RIXTEL, 5735 SH",
        },
        "email": Object {
          "en-US": "info@aarlesebouwmaterialen.nl",
        },
        "entryType": Object {
          "en-US": "Merchant",
        },
        "location": Object {
          "en-US": Object {
            "lat": 1,
            "lon": 2,
          },
        },
        "name": Object {
          "en-US": "Aarlese Bouwmaterialen",
        },
        "phone": Object {
          "en-US": "0492-383300",
        },
        "serviceTypes": Object {
          "en-US": Array [
            Object {
              "sys": Object {
                "id": "id-2",
                "linkType": "Entry",
                "type": "Link",
              },
            },
          ],
        },
        "summary": Object {
          "en-US": undefined,
        },
        "website": Object {
          "en-US": undefined,
        },
      },
    },
  ],
  Array [
    "roofer",
    Object {
      "fields": Object {
        "address": Object {
          "en-US": "Gouwe 1, ZWOLLE, 8032 CA",
        },
        "email": Object {
          "en-US": "info@aberson.nl",
        },
        "entryType": Object {
          "en-US": "Merchant",
        },
        "location": Object {
          "en-US": Object {
            "lat": 1,
            "lon": 2,
          },
        },
        "name": Object {
          "en-US": "Aberson BV",
        },
        "phone": Object {
          "en-US": "088-4553600",
        },
        "serviceTypes": Object {
          "en-US": Array [
            Object {
              "sys": Object {
                "id": "id-2",
                "linkType": "Entry",
                "type": "Link",
              },
            },
          ],
        },
        "summary": Object {
          "en-US": undefined,
        },
        "website": Object {
          "en-US": "https://www.aberson.nl",
        },
      },
    },
  ],
]
`;

exports[`Merchants contentful upload geocodes address: getEntries 1`] = `
Array [
  Array [
    Object {
      "content_type": "serviceType",
    },
  ],
]
`;

exports[`Merchants contentful upload geocodes address: getLocales 1`] = `
Array [
  Array [],
]
`;

exports[`Merchants contentful upload geocoding doesn't return results: createEntry 1`] = `
Array [
  Array [
    "roofer",
    Object {
      "fields": Object {
        "address": Object {
          "en-US": "Havenweg 17, AARLE RIXTEL, 5735 SH",
        },
        "email": Object {
          "en-US": "info@aarlesebouwmaterialen.nl",
        },
        "entryType": Object {
          "en-US": "Merchant",
        },
        "location": Object {
          "en-US": undefined,
        },
        "name": Object {
          "en-US": "Aarlese Bouwmaterialen",
        },
        "phone": Object {
          "en-US": "0492-383300",
        },
        "serviceTypes": Object {
          "en-US": Array [
            Object {
              "sys": Object {
                "id": "id-2",
                "linkType": "Entry",
                "type": "Link",
              },
            },
          ],
        },
        "summary": Object {
          "en-US": undefined,
        },
        "website": Object {
          "en-US": undefined,
        },
      },
    },
  ],
  Array [
    "roofer",
    Object {
      "fields": Object {
        "address": Object {
          "en-US": "Gouwe 1, ZWOLLE, 8032 CA",
        },
        "email": Object {
          "en-US": "info@aberson.nl",
        },
        "entryType": Object {
          "en-US": "Merchant",
        },
        "location": Object {
          "en-US": undefined,
        },
        "name": Object {
          "en-US": "Aberson BV",
        },
        "phone": Object {
          "en-US": "088-4553600",
        },
        "serviceTypes": Object {
          "en-US": Array [
            Object {
              "sys": Object {
                "id": "id-2",
                "linkType": "Entry",
                "type": "Link",
              },
            },
          ],
        },
        "summary": Object {
          "en-US": undefined,
        },
        "website": Object {
          "en-US": "https://www.aberson.nl",
        },
      },
    },
  ],
]
`;

exports[`Merchants contentful upload geocoding doesn't return results: error 1`] = `
Array [
  Array [
    "'Aarlese Bouwmaterialen' : Address \\"Havenweg 17, AARLE RIXTEL, 5735 SH\\" couldn't be geocoded. Error: Test error message.",
  ],
  Array [
    "'Aberson BV' : Address \\"Gouwe 1, ZWOLLE, 8032 CA\\" couldn't be geocoded. Error: Test error message.",
  ],
]
`;

exports[`Merchants contentful upload geocoding doesn't return results: getEntries 1`] = `
Array [
  Array [
    Object {
      "content_type": "serviceType",
    },
  ],
]
`;

exports[`Merchants contentful upload geocoding doesn't return results: getLocales 1`] = `
Array [
  Array [],
]
`;

exports[`Merchants contentful upload handles if the file doesn't exist: createEntry 1`] = `Array []`;

exports[`Merchants contentful upload handles if the file doesn't exist: error 1`] = `
Array [
  Array [
    [Error: Couldn't read data/a-non-existent-file.tsv],
  ],
  Array [
    "Process failed",
  ],
]
`;

exports[`Merchants contentful upload handles if the file doesn't exist: getEntries 1`] = `
Array [
  Array [
    Object {
      "content_type": "serviceType",
    },
  ],
]
`;

exports[`Merchants contentful upload handles if the file doesn't exist: getLocales 1`] = `
Array [
  Array [],
]
`;

exports[`Merchants contentful upload handles if the file doesn't exist: log 1`] = `
Array [
  Array [
    "Looking in data/a-non-existent-file.tsv",
  ],
  Array [
    "Uploadng to roofer, using:
SPACE: SPACE_ID:value
ENVIRONMENT: CONTENTFUL_ENVIRONMENT:value",
  ],
  Array [
    "Reading data/a-non-existent-file.tsv",
  ],
]
`;

exports[`Merchants contentful upload logs error when creating entry fails: createEntry 1`] = `
Array [
  Array [
    "roofer",
    Object {
      "fields": Object {
        "address": Object {
          "en-US": "Havenweg 17, AARLE RIXTEL, 5735 SH",
        },
        "email": Object {
          "en-US": "info@aarlesebouwmaterialen.nl",
        },
        "entryType": Object {
          "en-US": "Merchant",
        },
        "location": Object {
          "en-US": Object {
            "lat": 23,
            "lon": 63,
          },
        },
        "name": Object {
          "en-US": "Aarlese Bouwmaterialen",
        },
        "phone": Object {
          "en-US": "0492-383300",
        },
        "serviceTypes": Object {
          "en-US": Array [
            Object {
              "sys": Object {
                "id": "id-2",
                "linkType": "Entry",
                "type": "Link",
              },
            },
          ],
        },
        "summary": Object {
          "en-US": "Test summary",
        },
        "website": Object {
          "en-US": undefined,
        },
      },
    },
  ],
  Array [
    "roofer",
    Object {
      "fields": Object {
        "address": Object {
          "en-US": "Havenweg 17, AARLE RIXTEL, 5735 SH",
        },
        "email": Object {
          "en-US": "info@aarlesebouwmaterialen.nl",
        },
        "entryType": Object {
          "en-US": "Merchant",
        },
        "location": Object {
          "en-US": Object {
            "lat": 23,
            "lon": 63,
          },
        },
        "name": Object {
          "en-US": "BMN Bouwmaterialen",
        },
        "phone": Object {
          "en-US": "0492-383300",
        },
        "serviceTypes": Object {
          "en-US": Array [
            Object {
              "sys": Object {
                "id": "id-2",
                "linkType": "Entry",
                "type": "Link",
              },
            },
          ],
        },
        "summary": Object {
          "en-US": "Test summary",
        },
        "website": Object {
          "en-US": undefined,
        },
      },
    },
  ],
  Array [
    "roofer",
    Object {
      "fields": Object {
        "address": Object {
          "en-US": "Havenweg 17, AARLE RIXTEL, 5735 SH",
        },
        "email": Object {
          "en-US": "info@aarlesebouwmaterialen.nl",
        },
        "entryType": Object {
          "en-US": "Merchant",
        },
        "location": Object {
          "en-US": Object {
            "lat": 23,
            "lon": 63,
          },
        },
        "name": Object {
          "en-US": "BMN Zaltbommel",
        },
        "phone": Object {
          "en-US": "0492-383300",
        },
        "serviceTypes": Object {
          "en-US": Array [
            Object {
              "sys": Object {
                "id": "id-2",
                "linkType": "Entry",
                "type": "Link",
              },
            },
          ],
        },
        "summary": Object {
          "en-US": "Test summary",
        },
        "website": Object {
          "en-US": undefined,
        },
      },
    },
  ],
  Array [
    "roofer",
    Object {
      "fields": Object {
        "address": Object {
          "en-US": "Gouwe 1, ZWOLLE, 8032 CA",
        },
        "email": Object {
          "en-US": undefined,
        },
        "entryType": Object {
          "en-US": "Merchant",
        },
        "location": Object {
          "en-US": Object {
            "lat": 23,
            "lon": 63,
          },
        },
        "name": Object {
          "en-US": "Aberson BV",
        },
        "phone": Object {
          "en-US": "088-4553600",
        },
        "serviceTypes": Object {
          "en-US": Array [
            Object {
              "sys": Object {
                "id": "id-2",
                "linkType": "Entry",
                "type": "Link",
              },
            },
          ],
        },
        "summary": Object {
          "en-US": "Test summary",
        },
        "website": Object {
          "en-US": "https://www.aberson.nl",
        },
      },
    },
  ],
  Array [
    "roofer",
    Object {
      "fields": Object {
        "address": Object {
          "en-US": ", 088-4553600, info@aberson.nl",
        },
        "email": Object {
          "en-US": "Test summary",
        },
        "entryType": Object {
          "en-US": "Merchant",
        },
        "location": Object {
          "en-US": Object {
            "lat": 23,
            "lon": 63,
          },
        },
        "name": Object {
          "en-US": "Aberson BV2",
        },
        "phone": Object {
          "en-US": "www.aberson.nl",
        },
        "serviceTypes": Object {
          "en-US": Array [
            Object {
              "sys": Object {
                "id": "id-2",
                "linkType": "Entry",
                "type": "Link",
              },
            },
          ],
        },
        "summary": Object {
          "en-US": undefined,
        },
        "website": Object {
          "en-US": undefined,
        },
      },
    },
  ],
  Array [
    "serviceType",
    Object {
      "fields": Object {
        "name": Object {
          "en-US": "does_not_exist",
        },
      },
    },
  ],
  Array [
    "roofer",
    Object {
      "fields": Object {
        "address": Object {
          "en-US": "Gouwe 1, ZWOLLE, 8032 CA",
        },
        "email": Object {
          "en-US": "info@aberson.nl",
        },
        "entryType": Object {
          "en-US": "Merchant",
        },
        "location": Object {
          "en-US": Object {
            "lat": 23,
            "lon": 63,
          },
        },
        "name": Object {
          "en-US": "Aberson BV3",
        },
        "phone": Object {
          "en-US": "088-4553600",
        },
        "serviceTypes": Object {
          "en-US": Array [
            Object {
              "sys": Object {
                "id": "merchant-type-id",
                "linkType": "Entry",
                "type": "Link",
              },
            },
          ],
        },
        "summary": Object {
          "en-US": "Test summary",
        },
        "website": Object {
          "en-US": "http://www.aberson.nl",
        },
      },
    },
  ],
]
`;

exports[`Merchants contentful upload logs error when creating entry fails: error 1`] = `
Array [
  Array [
    "Failed to publish 'Aarlese Bouwmaterialen' :: source line No.: 1",
    [Error: Connection intrrupted],
  ],
  Array [
    [Error: fetch-mock: No fallback response defined for GET to https://maps.googleapis.com/maps/api/geocode/json?address=Aberson%20BV%20ZuidSolvayweg%202,%206049%20CP&key=undefined],
  ],
  Array [
    "Process failed",
  ],
]
`;

exports[`Merchants contentful upload logs error when creating entry fails: getEntries 1`] = `
Array [
  Array [
    Object {
      "content_type": "serviceType",
    },
  ],
]
`;

exports[`Merchants contentful upload logs error when creating entry fails: getLocales 1`] = `
Array [
  Array [],
]
`;

exports[`Merchants contentful upload logs error when creating entry fails: log 1`] = `
Array [
  Array [
    "Looking in data/merchants.tsv",
  ],
  Array [
    "Uploadng to roofer, using:
SPACE: SPACE_ID:value
ENVIRONMENT: CONTENTFUL_ENVIRONMENT:value",
  ],
  Array [
    "Reading data/merchants.tsv",
  ],
  Array [
    "Uploading 11 lines to columns: Name, Latitude, Longitude, Type of Merchant, Address, Country, City, Postcode, PhoneNumber, Email, Website, Summary of Company",
  ],
  Array [
    "Uploading line 1: 'Aarlese Bouwmaterialen'",
  ],
  Array [
    "Uploading line 2: 'BMN Bouwmaterialen'",
  ],
  Array [
    "Uploading line 3: 'BMN Zaltbommel'",
  ],
  Array [
    "Uploading line 4: 'Aberson BV'",
  ],
  Array [
    "Uploading line 5: 'Aberson BV2'",
  ],
  Array [
    "Uploading line 6: 'Aberson BV3'",
  ],
  Array [
    "Created and Published new Service Type - 'does_not_exist' with id 'merchant-type-id'",
  ],
  Array [
    "Uploading line 7: 'Aberson BV Zuid'",
  ],
]
`;

exports[`Merchants contentful upload throws if the file path is missing: createEntry 1`] = `Array []`;

exports[`Merchants contentful upload throws if the file path is missing: error 1`] = `
Array [
  Array [
    [Error: file path is missing],
  ],
  Array [
    "Process failed",
  ],
]
`;

exports[`Merchants contentful upload throws if the file path is missing: log 1`] = `Array []`;

exports[`Merchants contentful upload throws on missing env vars: createEntry 1`] = `Array []`;

exports[`Merchants contentful upload throws on missing env vars: error 1`] = `
Array [
  Array [
    [Error: Missing Env vars],
  ],
  Array [
    "Process failed",
  ],
]
`;

exports[`Merchants contentful upload throws on missing env vars: log 1`] = `
Array [
  Array [
    "Looking in data/merchants.tsv",
  ],
]
`;

exports[`Merchants contentful upload when getLocales returns null it uses env locale: createEntry 1`] = `
Array [
  Array [
    "serviceType",
    Object {
      "fields": Object {
        "name": Object {
          "en-US": "Hellend dak",
        },
      },
    },
  ],
  Array [
    "roofer",
    Object {
      "fields": Object {
        "address": Object {
          "en-US": "Havenweg 17, AARLE RIXTEL, 5735 SH",
        },
        "email": Object {
          "en-US": "info@aarlesebouwmaterialen.nl",
        },
        "entryType": Object {
          "en-US": "Merchant",
        },
        "location": Object {
          "en-US": Object {
            "lat": 23,
            "lon": 63,
          },
        },
        "name": Object {
          "en-US": "Aarlese Bouwmaterialen",
        },
        "phone": Object {
          "en-US": "0492-383300",
        },
        "serviceTypes": Object {
          "en-US": Array [
            Object {
              "sys": Object {
                "id": "merchant-type-id",
                "linkType": "Entry",
                "type": "Link",
              },
            },
          ],
        },
        "summary": Object {
          "en-US": "Test summary",
        },
        "website": Object {
          "en-US": undefined,
        },
      },
    },
  ],
  Array [
    "roofer",
    Object {
      "fields": Object {
        "address": Object {
          "en-US": "Havenweg 17, AARLE RIXTEL, 5735 SH",
        },
        "email": Object {
          "en-US": "info@aarlesebouwmaterialen.nl",
        },
        "entryType": Object {
          "en-US": "Merchant",
        },
        "location": Object {
          "en-US": Object {
            "lat": 23,
            "lon": 63,
          },
        },
        "name": Object {
          "en-US": "BMN Bouwmaterialen",
        },
        "phone": Object {
          "en-US": "0492-383300",
        },
        "serviceTypes": Object {
          "en-US": Array [
            Object {
              "sys": Object {
                "id": "merchant-type-id",
                "linkType": "Entry",
                "type": "Link",
              },
            },
          ],
        },
        "summary": Object {
          "en-US": "Test summary",
        },
        "website": Object {
          "en-US": undefined,
        },
      },
    },
  ],
  Array [
    "roofer",
    Object {
      "fields": Object {
        "address": Object {
          "en-US": "Havenweg 17, AARLE RIXTEL, 5735 SH",
        },
        "email": Object {
          "en-US": "info@aarlesebouwmaterialen.nl",
        },
        "entryType": Object {
          "en-US": "Merchant",
        },
        "location": Object {
          "en-US": Object {
            "lat": 23,
            "lon": 63,
          },
        },
        "name": Object {
          "en-US": "BMN Zaltbommel",
        },
        "phone": Object {
          "en-US": "0492-383300",
        },
        "serviceTypes": Object {
          "en-US": Array [
            Object {
              "sys": Object {
                "id": "merchant-type-id",
                "linkType": "Entry",
                "type": "Link",
              },
            },
          ],
        },
        "summary": Object {
          "en-US": "Test summary",
        },
        "website": Object {
          "en-US": undefined,
        },
      },
    },
  ],
  Array [
    "roofer",
    Object {
      "fields": Object {
        "address": Object {
          "en-US": "Gouwe 1, ZWOLLE, 8032 CA",
        },
        "email": Object {
          "en-US": undefined,
        },
        "entryType": Object {
          "en-US": "Merchant",
        },
        "location": Object {
          "en-US": Object {
            "lat": 23,
            "lon": 63,
          },
        },
        "name": Object {
          "en-US": "Aberson BV",
        },
        "phone": Object {
          "en-US": "088-4553600",
        },
        "serviceTypes": Object {
          "en-US": Array [
            Object {
              "sys": Object {
                "id": "merchant-type-id",
                "linkType": "Entry",
                "type": "Link",
              },
            },
          ],
        },
        "summary": Object {
          "en-US": "Test summary",
        },
        "website": Object {
          "en-US": "https://www.aberson.nl",
        },
      },
    },
  ],
  Array [
    "roofer",
    Object {
      "fields": Object {
        "address": Object {
          "en-US": ", 088-4553600, info@aberson.nl",
        },
        "email": Object {
          "en-US": "Test summary",
        },
        "entryType": Object {
          "en-US": "Merchant",
        },
        "location": Object {
          "en-US": Object {
            "lat": 23,
            "lon": 63,
          },
        },
        "name": Object {
          "en-US": "Aberson BV2",
        },
        "phone": Object {
          "en-US": "www.aberson.nl",
        },
        "serviceTypes": Object {
          "en-US": Array [
            Object {
              "sys": Object {
                "id": "merchant-type-id",
                "linkType": "Entry",
                "type": "Link",
              },
            },
          ],
        },
        "summary": Object {
          "en-US": undefined,
        },
        "website": Object {
          "en-US": undefined,
        },
      },
    },
  ],
  Array [
    "serviceType",
    Object {
      "fields": Object {
        "name": Object {
          "en-US": "does_not_exist",
        },
      },
    },
  ],
  Array [
    "roofer",
    Object {
      "fields": Object {
        "address": Object {
          "en-US": "Gouwe 1, ZWOLLE, 8032 CA",
        },
        "email": Object {
          "en-US": "info@aberson.nl",
        },
        "entryType": Object {
          "en-US": "Merchant",
        },
        "location": Object {
          "en-US": Object {
            "lat": 23,
            "lon": 63,
          },
        },
        "name": Object {
          "en-US": "Aberson BV3",
        },
        "phone": Object {
          "en-US": "088-4553600",
        },
        "serviceTypes": Object {
          "en-US": Array [
            Object {
              "sys": Object {
                "id": "merchant-type-id",
                "linkType": "Entry",
                "type": "Link",
              },
            },
          ],
        },
        "summary": Object {
          "en-US": "Test summary",
        },
        "website": Object {
          "en-US": "http://www.aberson.nl",
        },
      },
    },
  ],
]
`;

exports[`Merchants contentful upload when getLocales returns null it uses env locale: error 1`] = `
Array [
  Array [
    [Error: fetch-mock: No fallback response defined for GET to https://maps.googleapis.com/maps/api/geocode/json?address=Aberson%20BV%20ZuidSolvayweg%202,%206049%20CP&key=undefined],
  ],
  Array [
    "Process failed",
  ],
]
`;

exports[`Merchants contentful upload when getLocales returns null it uses env locale: getEntries 1`] = `
Array [
  Array [
    Object {
      "content_type": "serviceType",
    },
  ],
]
`;

exports[`Merchants contentful upload when getLocales returns null it uses env locale: getLocales 1`] = `
Array [
  Array [],
]
`;

exports[`Merchants contentful upload when getLocales returns null it uses env locale: log 1`] = `
Array [
  Array [
    "Looking in data/merchants.tsv",
  ],
  Array [
    "Uploadng to roofer, using:
SPACE: SPACE_ID:value
ENVIRONMENT: CONTENTFUL_ENVIRONMENT:value",
  ],
  Array [
    "Reading data/merchants.tsv",
  ],
  Array [
    "Uploading 11 lines to columns: Name, Latitude, Longitude, Type of Merchant, Address, Country, City, Postcode, PhoneNumber, Email, Website, Summary of Company",
  ],
  Array [
    "Uploading line 1: 'Aarlese Bouwmaterialen'",
  ],
  Array [
    "Created and Published new Service Type - 'Hellend dak' with id 'merchant-type-id'",
  ],
  Array [
    "Uploading line 2: 'BMN Bouwmaterialen'",
  ],
  Array [
    "Uploading line 3: 'BMN Zaltbommel'",
  ],
  Array [
    "Uploading line 4: 'Aberson BV'",
  ],
  Array [
    "Uploading line 5: 'Aberson BV2'",
  ],
  Array [
    "Uploading line 6: 'Aberson BV3'",
  ],
  Array [
    "Created and Published new Service Type - 'does_not_exist' with id 'merchant-type-id'",
  ],
  Array [
    "Uploading line 7: 'Aberson BV Zuid'",
  ],
]
`;

exports[`Merchants contentful upload when merchant type does not exist returns empty dictionary: createClient 1`] = `
Array [
  Array [
    Object {
      "accessToken": "MANAGEMENT_ACCESS_TOKEN:value",
    },
  ],
]
`;

exports[`Merchants contentful upload when merchant type does not exist returns empty dictionary: createEntry 1`] = `
Array [
  Array [
    "serviceType",
    Object {
      "fields": Object {
        "name": Object {
          "en-US": "Hellend dak",
        },
      },
    },
  ],
  Array [
    "roofer",
    Object {
      "fields": Object {
        "address": Object {
          "en-US": "Havenweg 17, AARLE RIXTEL, 5735 SH",
        },
        "email": Object {
          "en-US": "info@aarlesebouwmaterialen.nl",
        },
        "entryType": Object {
          "en-US": "Merchant",
        },
        "location": Object {
          "en-US": Object {
            "lat": 23,
            "lon": 63,
          },
        },
        "name": Object {
          "en-US": "Aarlese Bouwmaterialen",
        },
        "phone": Object {
          "en-US": "0492-383300",
        },
        "serviceTypes": Object {
          "en-US": Array [
            Object {
              "sys": Object {
                "id": "merchant-type-id",
                "linkType": "Entry",
                "type": "Link",
              },
            },
          ],
        },
        "summary": Object {
          "en-US": "Test summary",
        },
        "website": Object {
          "en-US": undefined,
        },
      },
    },
  ],
  Array [
    "roofer",
    Object {
      "fields": Object {
        "address": Object {
          "en-US": "Havenweg 17, AARLE RIXTEL, 5735 SH",
        },
        "email": Object {
          "en-US": "info@aarlesebouwmaterialen.nl",
        },
        "entryType": Object {
          "en-US": "Merchant",
        },
        "location": Object {
          "en-US": Object {
            "lat": 23,
            "lon": 63,
          },
        },
        "name": Object {
          "en-US": "BMN Bouwmaterialen",
        },
        "phone": Object {
          "en-US": "0492-383300",
        },
        "serviceTypes": Object {
          "en-US": Array [
            Object {
              "sys": Object {
                "id": "merchant-type-id",
                "linkType": "Entry",
                "type": "Link",
              },
            },
          ],
        },
        "summary": Object {
          "en-US": "Test summary",
        },
        "website": Object {
          "en-US": undefined,
        },
      },
    },
  ],
  Array [
    "roofer",
    Object {
      "fields": Object {
        "address": Object {
          "en-US": "Havenweg 17, AARLE RIXTEL, 5735 SH",
        },
        "email": Object {
          "en-US": "info@aarlesebouwmaterialen.nl",
        },
        "entryType": Object {
          "en-US": "Merchant",
        },
        "location": Object {
          "en-US": Object {
            "lat": 23,
            "lon": 63,
          },
        },
        "name": Object {
          "en-US": "BMN Zaltbommel",
        },
        "phone": Object {
          "en-US": "0492-383300",
        },
        "serviceTypes": Object {
          "en-US": Array [
            Object {
              "sys": Object {
                "id": "merchant-type-id",
                "linkType": "Entry",
                "type": "Link",
              },
            },
          ],
        },
        "summary": Object {
          "en-US": "Test summary",
        },
        "website": Object {
          "en-US": undefined,
        },
      },
    },
  ],
  Array [
    "roofer",
    Object {
      "fields": Object {
        "address": Object {
          "en-US": "Gouwe 1, ZWOLLE, 8032 CA",
        },
        "email": Object {
          "en-US": undefined,
        },
        "entryType": Object {
          "en-US": "Merchant",
        },
        "location": Object {
          "en-US": Object {
            "lat": 23,
            "lon": 63,
          },
        },
        "name": Object {
          "en-US": "Aberson BV",
        },
        "phone": Object {
          "en-US": "088-4553600",
        },
        "serviceTypes": Object {
          "en-US": Array [
            Object {
              "sys": Object {
                "id": "merchant-type-id",
                "linkType": "Entry",
                "type": "Link",
              },
            },
          ],
        },
        "summary": Object {
          "en-US": "Test summary",
        },
        "website": Object {
          "en-US": "https://www.aberson.nl",
        },
      },
    },
  ],
  Array [
    "roofer",
    Object {
      "fields": Object {
        "address": Object {
          "en-US": ", 088-4553600, info@aberson.nl",
        },
        "email": Object {
          "en-US": "Test summary",
        },
        "entryType": Object {
          "en-US": "Merchant",
        },
        "location": Object {
          "en-US": Object {
            "lat": 23,
            "lon": 63,
          },
        },
        "name": Object {
          "en-US": "Aberson BV2",
        },
        "phone": Object {
          "en-US": "www.aberson.nl",
        },
        "serviceTypes": Object {
          "en-US": Array [
            Object {
              "sys": Object {
                "id": "merchant-type-id",
                "linkType": "Entry",
                "type": "Link",
              },
            },
          ],
        },
        "summary": Object {
          "en-US": undefined,
        },
        "website": Object {
          "en-US": undefined,
        },
      },
    },
  ],
  Array [
    "serviceType",
    Object {
      "fields": Object {
        "name": Object {
          "en-US": "does_not_exist",
        },
      },
    },
  ],
  Array [
    "roofer",
    Object {
      "fields": Object {
        "address": Object {
          "en-US": "Gouwe 1, ZWOLLE, 8032 CA",
        },
        "email": Object {
          "en-US": "info@aberson.nl",
        },
        "entryType": Object {
          "en-US": "Merchant",
        },
        "location": Object {
          "en-US": Object {
            "lat": 23,
            "lon": 63,
          },
        },
        "name": Object {
          "en-US": "Aberson BV3",
        },
        "phone": Object {
          "en-US": "088-4553600",
        },
        "serviceTypes": Object {
          "en-US": Array [
            Object {
              "sys": Object {
                "id": "merchant-type-id",
                "linkType": "Entry",
                "type": "Link",
              },
            },
          ],
        },
        "summary": Object {
          "en-US": "Test summary",
        },
        "website": Object {
          "en-US": "http://www.aberson.nl",
        },
      },
    },
  ],
]
`;

exports[`Merchants contentful upload when merchant type does not exist returns empty dictionary: error 1`] = `
Array [
  Array [
    [Error: fetch-mock: No fallback response defined for GET to https://maps.googleapis.com/maps/api/geocode/json?address=Aberson%20BV%20ZuidSolvayweg%202,%206049%20CP&key=undefined],
  ],
  Array [
    "Process failed",
  ],
]
`;

exports[`Merchants contentful upload when merchant type does not exist returns empty dictionary: getEntries 1`] = `
Array [
  Array [
    Object {
      "content_type": "serviceType",
    },
  ],
]
`;

exports[`Merchants contentful upload when merchant type does not exist returns empty dictionary: getEnvironment 1`] = `
Array [
  Array [
    "CONTENTFUL_ENVIRONMENT:value",
  ],
]
`;

exports[`Merchants contentful upload when merchant type does not exist returns empty dictionary: getLocales 1`] = `
Array [
  Array [],
]
`;

exports[`Merchants contentful upload when merchant type does not exist returns empty dictionary: getSpace 1`] = `
Array [
  Array [
    "SPACE_ID:value",
  ],
]
`;

exports[`Merchants contentful upload when merchant type does not exist returns empty dictionary: log 1`] = `
Array [
  Array [
    "Looking in data/merchants.tsv",
  ],
  Array [
    "Uploadng to roofer, using:
SPACE: SPACE_ID:value
ENVIRONMENT: CONTENTFUL_ENVIRONMENT:value",
  ],
  Array [
    "Reading data/merchants.tsv",
  ],
  Array [
    "Uploading 11 lines to columns: Name, Latitude, Longitude, Type of Merchant, Address, Country, City, Postcode, PhoneNumber, Email, Website, Summary of Company",
  ],
  Array [
    "Uploading line 1: 'Aarlese Bouwmaterialen'",
  ],
  Array [
    "Created and Published new Service Type - 'Hellend dak' with id 'merchant-type-id'",
  ],
  Array [
    "Uploading line 2: 'BMN Bouwmaterialen'",
  ],
  Array [
    "Uploading line 3: 'BMN Zaltbommel'",
  ],
  Array [
    "Uploading line 4: 'Aberson BV'",
  ],
  Array [
    "Uploading line 5: 'Aberson BV2'",
  ],
  Array [
    "Uploading line 6: 'Aberson BV3'",
  ],
  Array [
    "Created and Published new Service Type - 'does_not_exist' with id 'merchant-type-id'",
  ],
  Array [
    "Uploading line 7: 'Aberson BV Zuid'",
  ],
]
`;

exports[`Merchants contentful upload when merchant type gets created but does not publish: createEntry 1`] = `
Array [
  Array [
    "serviceType",
    Object {
      "fields": Object {
        "name": Object {
          "en-US": "Hellend dak",
        },
      },
    },
  ],
  Array [
    "roofer",
    Object {
      "fields": Object {
        "address": Object {
          "en-US": "Havenweg 17, AARLE RIXTEL, 5735 SH",
        },
        "email": Object {
          "en-US": "info@aarlesebouwmaterialen.nl",
        },
        "entryType": Object {
          "en-US": "Merchant",
        },
        "location": Object {
          "en-US": Object {
            "lat": 23,
            "lon": 63,
          },
        },
        "name": Object {
          "en-US": "Aarlese Bouwmaterialen",
        },
        "phone": Object {
          "en-US": "0492-383300",
        },
        "serviceTypes": Object {
          "en-US": Array [
            Object {
              "sys": Object {
                "id": "merchant-type-id",
                "linkType": "Entry",
                "type": "Link",
              },
            },
          ],
        },
        "summary": Object {
          "en-US": "Test summary",
        },
        "website": Object {
          "en-US": undefined,
        },
      },
    },
  ],
  Array [
    "roofer",
    Object {
      "fields": Object {
        "address": Object {
          "en-US": "Havenweg 17, AARLE RIXTEL, 5735 SH",
        },
        "email": Object {
          "en-US": "info@aarlesebouwmaterialen.nl",
        },
        "entryType": Object {
          "en-US": "Merchant",
        },
        "location": Object {
          "en-US": Object {
            "lat": 23,
            "lon": 63,
          },
        },
        "name": Object {
          "en-US": "BMN Bouwmaterialen",
        },
        "phone": Object {
          "en-US": "0492-383300",
        },
        "serviceTypes": Object {
          "en-US": Array [
            Object {
              "sys": Object {
                "id": "merchant-type-id",
                "linkType": "Entry",
                "type": "Link",
              },
            },
          ],
        },
        "summary": Object {
          "en-US": "Test summary",
        },
        "website": Object {
          "en-US": undefined,
        },
      },
    },
  ],
  Array [
    "roofer",
    Object {
      "fields": Object {
        "address": Object {
          "en-US": "Havenweg 17, AARLE RIXTEL, 5735 SH",
        },
        "email": Object {
          "en-US": "info@aarlesebouwmaterialen.nl",
        },
        "entryType": Object {
          "en-US": "Merchant",
        },
        "location": Object {
          "en-US": Object {
            "lat": 23,
            "lon": 63,
          },
        },
        "name": Object {
          "en-US": "BMN Zaltbommel",
        },
        "phone": Object {
          "en-US": "0492-383300",
        },
        "serviceTypes": Object {
          "en-US": Array [
            Object {
              "sys": Object {
                "id": "merchant-type-id",
                "linkType": "Entry",
                "type": "Link",
              },
            },
          ],
        },
        "summary": Object {
          "en-US": "Test summary",
        },
        "website": Object {
          "en-US": undefined,
        },
      },
    },
  ],
  Array [
    "roofer",
    Object {
      "fields": Object {
        "address": Object {
          "en-US": "Gouwe 1, ZWOLLE, 8032 CA",
        },
        "email": Object {
          "en-US": undefined,
        },
        "entryType": Object {
          "en-US": "Merchant",
        },
        "location": Object {
          "en-US": Object {
            "lat": 23,
            "lon": 63,
          },
        },
        "name": Object {
          "en-US": "Aberson BV",
        },
        "phone": Object {
          "en-US": "088-4553600",
        },
        "serviceTypes": Object {
          "en-US": Array [
            Object {
              "sys": Object {
                "id": "merchant-type-id",
                "linkType": "Entry",
                "type": "Link",
              },
            },
          ],
        },
        "summary": Object {
          "en-US": "Test summary",
        },
        "website": Object {
          "en-US": "https://www.aberson.nl",
        },
      },
    },
  ],
  Array [
    "roofer",
    Object {
      "fields": Object {
        "address": Object {
          "en-US": ", 088-4553600, info@aberson.nl",
        },
        "email": Object {
          "en-US": "Test summary",
        },
        "entryType": Object {
          "en-US": "Merchant",
        },
        "location": Object {
          "en-US": Object {
            "lat": 23,
            "lon": 63,
          },
        },
        "name": Object {
          "en-US": "Aberson BV2",
        },
        "phone": Object {
          "en-US": "www.aberson.nl",
        },
        "serviceTypes": Object {
          "en-US": Array [
            Object {
              "sys": Object {
                "id": "merchant-type-id",
                "linkType": "Entry",
                "type": "Link",
              },
            },
          ],
        },
        "summary": Object {
          "en-US": undefined,
        },
        "website": Object {
          "en-US": undefined,
        },
      },
    },
  ],
  Array [
    "serviceType",
    Object {
      "fields": Object {
        "name": Object {
          "en-US": "does_not_exist",
        },
      },
    },
  ],
  Array [
    "roofer",
    Object {
      "fields": Object {
        "address": Object {
          "en-US": "Gouwe 1, ZWOLLE, 8032 CA",
        },
        "email": Object {
          "en-US": "info@aberson.nl",
        },
        "entryType": Object {
          "en-US": "Merchant",
        },
        "location": Object {
          "en-US": Object {
            "lat": 23,
            "lon": 63,
          },
        },
        "name": Object {
          "en-US": "Aberson BV3",
        },
        "phone": Object {
          "en-US": "088-4553600",
        },
        "serviceTypes": Object {
          "en-US": Array [
            Object {
              "sys": Object {
                "id": "merchant-type-id",
                "linkType": "Entry",
                "type": "Link",
              },
            },
          ],
        },
        "summary": Object {
          "en-US": "Test summary",
        },
        "website": Object {
          "en-US": "http://www.aberson.nl",
        },
      },
    },
  ],
]
`;

exports[`Merchants contentful upload when merchant type gets created but does not publish: error 1`] = `
Array [
  Array [
    [Error: fetch-mock: No fallback response defined for GET to https://maps.googleapis.com/maps/api/geocode/json?address=Aberson%20BV%20ZuidSolvayweg%202,%206049%20CP&key=undefined],
  ],
  Array [
    "Process failed",
  ],
]
`;

exports[`Merchants contentful upload when merchant type gets created but does not publish: getEntries 1`] = `
Array [
  Array [
    Object {
      "content_type": "serviceType",
    },
  ],
]
`;

exports[`Merchants contentful upload when merchant type gets created but does not publish: getLocales 1`] = `
Array [
  Array [],
]
`;

exports[`Merchants contentful upload when merchant type gets created but does not publish: log 1`] = `
Array [
  Array [
    "Looking in data/merchants.tsv",
  ],
  Array [
    "Uploadng to roofer, using:
SPACE: SPACE_ID:value
ENVIRONMENT: CONTENTFUL_ENVIRONMENT:value",
  ],
  Array [
    "Reading data/merchants.tsv",
  ],
  Array [
    "Uploading 11 lines to columns: Name, Latitude, Longitude, Type of Merchant, Address, Country, City, Postcode, PhoneNumber, Email, Website, Summary of Company",
  ],
  Array [
    "Uploading line 1: 'Aarlese Bouwmaterialen'",
  ],
  Array [
    "Created and Published new Service Type - 'Hellend dak' with id 'merchant-type-id'",
  ],
  Array [
    "Uploading line 2: 'BMN Bouwmaterialen'",
  ],
  Array [
    "Uploading line 3: 'BMN Zaltbommel'",
  ],
  Array [
    "Uploading line 4: 'Aberson BV'",
  ],
  Array [
    "Uploading line 5: 'Aberson BV2'",
  ],
  Array [
    "Uploading line 6: 'Aberson BV3'",
  ],
  Array [
    "Created and Published new Service Type - 'does_not_exist' with id 'merchant-type-id'",
  ],
  Array [
    "Uploading line 7: 'Aberson BV Zuid'",
  ],
]
`;

exports[`Merchants contentful upload when merchant type throws error: createEntry 1`] = `
Array [
  Array [
    "serviceType",
    Object {
      "fields": Object {
        "name": Object {
          "en-US": "Hellend dak",
        },
      },
    },
  ],
  Array [
    "roofer",
    Object {
      "fields": Object {
        "address": Object {
          "en-US": "Havenweg 17, AARLE RIXTEL, 5735 SH",
        },
        "email": Object {
          "en-US": "info@aarlesebouwmaterialen.nl",
        },
        "entryType": Object {
          "en-US": "Merchant",
        },
        "location": Object {
          "en-US": Object {
            "lat": 23,
            "lon": 63,
          },
        },
        "name": Object {
          "en-US": "Aarlese Bouwmaterialen",
        },
        "phone": Object {
          "en-US": "0492-383300",
        },
        "serviceTypes": Object {
          "en-US": Array [
            Object {
              "sys": Object {
                "id": undefined,
                "linkType": "Entry",
                "type": "Link",
              },
            },
          ],
        },
        "summary": Object {
          "en-US": "Test summary",
        },
        "website": Object {
          "en-US": undefined,
        },
      },
    },
  ],
  Array [
    "serviceType",
    Object {
      "fields": Object {
        "name": Object {
          "en-US": "Hellend dak",
        },
      },
    },
  ],
  Array [
    "roofer",
    Object {
      "fields": Object {
        "address": Object {
          "en-US": "Havenweg 17, AARLE RIXTEL, 5735 SH",
        },
        "email": Object {
          "en-US": "info@aarlesebouwmaterialen.nl",
        },
        "entryType": Object {
          "en-US": "Merchant",
        },
        "location": Object {
          "en-US": Object {
            "lat": 23,
            "lon": 63,
          },
        },
        "name": Object {
          "en-US": "BMN Bouwmaterialen",
        },
        "phone": Object {
          "en-US": "0492-383300",
        },
        "serviceTypes": Object {
          "en-US": Array [
            Object {
              "sys": Object {
                "id": undefined,
                "linkType": "Entry",
                "type": "Link",
              },
            },
          ],
        },
        "summary": Object {
          "en-US": "Test summary",
        },
        "website": Object {
          "en-US": undefined,
        },
      },
    },
  ],
  Array [
    "serviceType",
    Object {
      "fields": Object {
        "name": Object {
          "en-US": "Hellend dak",
        },
      },
    },
  ],
  Array [
    "roofer",
    Object {
      "fields": Object {
        "address": Object {
          "en-US": "Havenweg 17, AARLE RIXTEL, 5735 SH",
        },
        "email": Object {
          "en-US": "info@aarlesebouwmaterialen.nl",
        },
        "entryType": Object {
          "en-US": "Merchant",
        },
        "location": Object {
          "en-US": Object {
            "lat": 23,
            "lon": 63,
          },
        },
        "name": Object {
          "en-US": "BMN Zaltbommel",
        },
        "phone": Object {
          "en-US": "0492-383300",
        },
        "serviceTypes": Object {
          "en-US": Array [
            Object {
              "sys": Object {
                "id": undefined,
                "linkType": "Entry",
                "type": "Link",
              },
            },
          ],
        },
        "summary": Object {
          "en-US": "Test summary",
        },
        "website": Object {
          "en-US": undefined,
        },
      },
    },
  ],
  Array [
    "serviceType",
    Object {
      "fields": Object {
        "name": Object {
          "en-US": "Hellend dak",
        },
      },
    },
  ],
  Array [
    "roofer",
    Object {
      "fields": Object {
        "address": Object {
          "en-US": "Gouwe 1, ZWOLLE, 8032 CA",
        },
        "email": Object {
          "en-US": undefined,
        },
        "entryType": Object {
          "en-US": "Merchant",
        },
        "location": Object {
          "en-US": Object {
            "lat": 23,
            "lon": 63,
          },
        },
        "name": Object {
          "en-US": "Aberson BV",
        },
        "phone": Object {
          "en-US": "088-4553600",
        },
        "serviceTypes": Object {
          "en-US": Array [
            Object {
              "sys": Object {
                "id": undefined,
                "linkType": "Entry",
                "type": "Link",
              },
            },
          ],
        },
        "summary": Object {
          "en-US": "Test summary",
        },
        "website": Object {
          "en-US": "https://www.aberson.nl",
        },
      },
    },
  ],
  Array [
    "serviceType",
    Object {
      "fields": Object {
        "name": Object {
          "en-US": "Hellend dak",
        },
      },
    },
  ],
  Array [
    "roofer",
    Object {
      "fields": Object {
        "address": Object {
          "en-US": ", 088-4553600, info@aberson.nl",
        },
        "email": Object {
          "en-US": "Test summary",
        },
        "entryType": Object {
          "en-US": "Merchant",
        },
        "location": Object {
          "en-US": Object {
            "lat": 23,
            "lon": 63,
          },
        },
        "name": Object {
          "en-US": "Aberson BV2",
        },
        "phone": Object {
          "en-US": "www.aberson.nl",
        },
        "serviceTypes": Object {
          "en-US": Array [
            Object {
              "sys": Object {
                "id": undefined,
                "linkType": "Entry",
                "type": "Link",
              },
            },
          ],
        },
        "summary": Object {
          "en-US": undefined,
        },
        "website": Object {
          "en-US": undefined,
        },
      },
    },
  ],
  Array [
    "serviceType",
    Object {
      "fields": Object {
        "name": Object {
          "en-US": "does_not_exist",
        },
      },
    },
  ],
  Array [
    "roofer",
    Object {
      "fields": Object {
        "address": Object {
          "en-US": "Gouwe 1, ZWOLLE, 8032 CA",
        },
        "email": Object {
          "en-US": "info@aberson.nl",
        },
        "entryType": Object {
          "en-US": "Merchant",
        },
        "location": Object {
          "en-US": Object {
            "lat": 23,
            "lon": 63,
          },
        },
        "name": Object {
          "en-US": "Aberson BV3",
        },
        "phone": Object {
          "en-US": "088-4553600",
        },
        "serviceTypes": Object {
          "en-US": Array [
            Object {
              "sys": Object {
                "id": undefined,
                "linkType": "Entry",
                "type": "Link",
              },
            },
          ],
        },
        "summary": Object {
          "en-US": "Test summary",
        },
        "website": Object {
          "en-US": "http://www.aberson.nl",
        },
      },
    },
  ],
]
`;

exports[`Merchants contentful upload when merchant type throws error: error 1`] = `
Array [
  Array [
    "Failed to publish Merchant type : 'Hellend dak' :: source line No.: 1",
    [Error: cannot create merchant type],
  ],
  Array [
    "Failed to publish Merchant type : 'Hellend dak' :: source line No.: 2",
    [Error: cannot create merchant type],
  ],
  Array [
    "Failed to publish Merchant type : 'Hellend dak' :: source line No.: 3",
    [Error: cannot create merchant type],
  ],
  Array [
    "Failed to publish Merchant type : 'Hellend dak' :: source line No.: 4",
    [Error: cannot create merchant type],
  ],
  Array [
    "Failed to publish Merchant type : 'Hellend dak' :: source line No.: 5",
    [Error: cannot create merchant type],
  ],
  Array [
    "Failed to publish Merchant type : 'does_not_exist' :: source line No.: 6",
    [Error: cannot create merchant type],
  ],
  Array [
    [Error: fetch-mock: No fallback response defined for GET to https://maps.googleapis.com/maps/api/geocode/json?address=Aberson%20BV%20ZuidSolvayweg%202,%206049%20CP&key=undefined],
  ],
  Array [
    "Process failed",
  ],
]
`;

exports[`Merchants contentful upload when merchant type throws error: getEntries 1`] = `
Array [
  Array [
    Object {
      "content_type": "serviceType",
    },
  ],
]
`;

exports[`Merchants contentful upload when merchant type throws error: getLocales 1`] = `
Array [
  Array [],
]
`;

exports[`Merchants contentful upload when merchant type throws error: log 1`] = `
Array [
  Array [
    "Looking in data/merchants.tsv",
  ],
  Array [
    "Uploadng to roofer, using:
SPACE: SPACE_ID:value
ENVIRONMENT: CONTENTFUL_ENVIRONMENT:value",
  ],
  Array [
    "Reading data/merchants.tsv",
  ],
  Array [
    "Uploading 11 lines to columns: Name, Latitude, Longitude, Type of Merchant, Address, Country, City, Postcode, PhoneNumber, Email, Website, Summary of Company",
  ],
  Array [
    "Uploading line 1: 'Aarlese Bouwmaterialen'",
  ],
  Array [
    "Uploading line 2: 'BMN Bouwmaterialen'",
  ],
  Array [
    "Uploading line 3: 'BMN Zaltbommel'",
  ],
  Array [
    "Uploading line 4: 'Aberson BV'",
  ],
  Array [
    "Uploading line 5: 'Aberson BV2'",
  ],
  Array [
    "Uploading line 6: 'Aberson BV3'",
  ],
  Array [
    "Uploading line 7: 'Aberson BV Zuid'",
  ],
]
`;

exports[`Merchants contentful upload when site locale is different from env variable locale: createEntry 1`] = `
Array [
  Array [
    "serviceType",
    Object {
      "fields": Object {
        "name": Object {
          "en-GB": "Hellend dak",
        },
      },
    },
  ],
  Array [
    "roofer",
    Object {
      "fields": Object {
        "address": Object {
          "en-GB": "Havenweg 17, AARLE RIXTEL, 5735 SH",
        },
        "email": Object {
          "en-GB": "info@aarlesebouwmaterialen.nl",
        },
        "entryType": Object {
          "en-GB": "Merchant",
        },
        "location": Object {
          "en-GB": Object {
            "lat": 23,
            "lon": 63,
          },
        },
        "name": Object {
          "en-GB": "Aarlese Bouwmaterialen",
        },
        "phone": Object {
          "en-GB": "0492-383300",
        },
        "serviceTypes": Object {
          "en-GB": Array [
            Object {
              "sys": Object {
                "id": "merchant-type-id",
                "linkType": "Entry",
                "type": "Link",
              },
            },
          ],
        },
        "summary": Object {
          "en-GB": "Test summary",
        },
        "website": Object {
          "en-GB": undefined,
        },
      },
    },
  ],
  Array [
    "roofer",
    Object {
      "fields": Object {
        "address": Object {
          "en-GB": "Havenweg 17, AARLE RIXTEL, 5735 SH",
        },
        "email": Object {
          "en-GB": "info@aarlesebouwmaterialen.nl",
        },
        "entryType": Object {
          "en-GB": "Merchant",
        },
        "location": Object {
          "en-GB": Object {
            "lat": 23,
            "lon": 63,
          },
        },
        "name": Object {
          "en-GB": "BMN Bouwmaterialen",
        },
        "phone": Object {
          "en-GB": "0492-383300",
        },
        "serviceTypes": Object {
          "en-GB": Array [
            Object {
              "sys": Object {
                "id": "merchant-type-id",
                "linkType": "Entry",
                "type": "Link",
              },
            },
          ],
        },
        "summary": Object {
          "en-GB": "Test summary",
        },
        "website": Object {
          "en-GB": undefined,
        },
      },
    },
  ],
  Array [
    "roofer",
    Object {
      "fields": Object {
        "address": Object {
          "en-GB": "Havenweg 17, AARLE RIXTEL, 5735 SH",
        },
        "email": Object {
          "en-GB": "info@aarlesebouwmaterialen.nl",
        },
        "entryType": Object {
          "en-GB": "Merchant",
        },
        "location": Object {
          "en-GB": Object {
            "lat": 23,
            "lon": 63,
          },
        },
        "name": Object {
          "en-GB": "BMN Zaltbommel",
        },
        "phone": Object {
          "en-GB": "0492-383300",
        },
        "serviceTypes": Object {
          "en-GB": Array [
            Object {
              "sys": Object {
                "id": "merchant-type-id",
                "linkType": "Entry",
                "type": "Link",
              },
            },
          ],
        },
        "summary": Object {
          "en-GB": "Test summary",
        },
        "website": Object {
          "en-GB": undefined,
        },
      },
    },
  ],
  Array [
    "roofer",
    Object {
      "fields": Object {
        "address": Object {
          "en-GB": "Gouwe 1, ZWOLLE, 8032 CA",
        },
        "email": Object {
          "en-GB": undefined,
        },
        "entryType": Object {
          "en-GB": "Merchant",
        },
        "location": Object {
          "en-GB": Object {
            "lat": 23,
            "lon": 63,
          },
        },
        "name": Object {
          "en-GB": "Aberson BV",
        },
        "phone": Object {
          "en-GB": "088-4553600",
        },
        "serviceTypes": Object {
          "en-GB": Array [
            Object {
              "sys": Object {
                "id": "merchant-type-id",
                "linkType": "Entry",
                "type": "Link",
              },
            },
          ],
        },
        "summary": Object {
          "en-GB": "Test summary",
        },
        "website": Object {
          "en-GB": "https://www.aberson.nl",
        },
      },
    },
  ],
  Array [
    "roofer",
    Object {
      "fields": Object {
        "address": Object {
          "en-GB": ", 088-4553600, info@aberson.nl",
        },
        "email": Object {
          "en-GB": "Test summary",
        },
        "entryType": Object {
          "en-GB": "Merchant",
        },
        "location": Object {
          "en-GB": Object {
            "lat": 23,
            "lon": 63,
          },
        },
        "name": Object {
          "en-GB": "Aberson BV2",
        },
        "phone": Object {
          "en-GB": "www.aberson.nl",
        },
        "serviceTypes": Object {
          "en-GB": Array [
            Object {
              "sys": Object {
                "id": "merchant-type-id",
                "linkType": "Entry",
                "type": "Link",
              },
            },
          ],
        },
        "summary": Object {
          "en-GB": undefined,
        },
        "website": Object {
          "en-GB": undefined,
        },
      },
    },
  ],
  Array [
    "serviceType",
    Object {
      "fields": Object {
        "name": Object {
          "en-GB": "does_not_exist",
        },
      },
    },
  ],
  Array [
    "roofer",
    Object {
      "fields": Object {
        "address": Object {
          "en-GB": "Gouwe 1, ZWOLLE, 8032 CA",
        },
        "email": Object {
          "en-GB": "info@aberson.nl",
        },
        "entryType": Object {
          "en-GB": "Merchant",
        },
        "location": Object {
          "en-GB": Object {
            "lat": 23,
            "lon": 63,
          },
        },
        "name": Object {
          "en-GB": "Aberson BV3",
        },
        "phone": Object {
          "en-GB": "088-4553600",
        },
        "serviceTypes": Object {
          "en-GB": Array [
            Object {
              "sys": Object {
                "id": "merchant-type-id",
                "linkType": "Entry",
                "type": "Link",
              },
            },
          ],
        },
        "summary": Object {
          "en-GB": "Test summary",
        },
        "website": Object {
          "en-GB": "http://www.aberson.nl",
        },
      },
    },
  ],
]
`;

exports[`Merchants contentful upload when site locale is different from env variable locale: error 1`] = `
Array [
  Array [
    [Error: fetch-mock: No fallback response defined for GET to https://maps.googleapis.com/maps/api/geocode/json?address=Aberson%20BV%20ZuidSolvayweg%202,%206049%20CP&key=undefined],
  ],
  Array [
    "Process failed",
  ],
]
`;

exports[`Merchants contentful upload when site locale is different from env variable locale: getEntries 1`] = `
Array [
  Array [
    Object {
      "content_type": "serviceType",
    },
  ],
]
`;

exports[`Merchants contentful upload when site locale is different from env variable locale: getLocales 1`] = `
Array [
  Array [],
]
`;

exports[`Merchants contentful upload when site locale is different from env variable locale: log 1`] = `
Array [
  Array [
    "Looking in data/merchants.tsv",
  ],
  Array [
    "updated LOCALE environment Locale : en-GB",
  ],
  Array [
    "Uploadng to roofer, using:
SPACE: SPACE_ID:value
ENVIRONMENT: CONTENTFUL_ENVIRONMENT:value",
  ],
  Array [
    "Reading data/merchants.tsv",
  ],
  Array [
    "Uploading 11 lines to columns: Name, Latitude, Longitude, Type of Merchant, Address, Country, City, Postcode, PhoneNumber, Email, Website, Summary of Company",
  ],
  Array [
    "Uploading line 1: 'Aarlese Bouwmaterialen'",
  ],
  Array [
    "Created and Published new Service Type - 'Hellend dak' with id 'merchant-type-id'",
  ],
  Array [
    "Uploading line 2: 'BMN Bouwmaterialen'",
  ],
  Array [
    "Uploading line 3: 'BMN Zaltbommel'",
  ],
  Array [
    "Uploading line 4: 'Aberson BV'",
  ],
  Array [
    "Uploading line 5: 'Aberson BV2'",
  ],
  Array [
    "Uploading line 6: 'Aberson BV3'",
  ],
  Array [
    "Created and Published new Service Type - 'does_not_exist' with id 'merchant-type-id'",
  ],
  Array [
    "Uploading line 7: 'Aberson BV Zuid'",
  ],
]
`;
